k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loadtest-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["app.devopshiep.shop"]  
      secretName: loadtest-tls
  rules:
    - host: app.devopshiep.shop   
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loadtest-service
                port: { number: 80 }
